// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importing parses importing bar(A) fog(B) 1`] = `
[
  {
    "args": [
      "A",
    ],
    "end": 21,
    "kind": "import",
    "name": "bar",
    "start": 14,
  },
  {
    "args": [
      "B",
    ],
    "end": 29,
    "kind": "import",
    "name": "fog",
    "start": 22,
  },
]
`;

exports[`lineComment parse // #export foo 1`] = `
[
  {
    "end": 14,
    "kind": "export",
    "name": "foo",
    "start": 2,
  },
]
`;

exports[`parse #export foo 1`] = `
[
  {
    "end": 11,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar) 1`] = `
[
  {
    "args": [
      "bar",
    ],
    "end": 16,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export foo(bar, baz, boo) 1`] = `
[
  {
    "args": [
      "bar",
      "baz",
      "boo",
    ],
    "end": 26,
    "kind": "export",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #export(A, B) importing bar(A) 1`] = `
{
  "args": [
    "A",
    "B",
  ],
  "end": 36,
  "importing": [
    {
      "args": [
        "A",
      ],
      "end": 35,
      "kind": "import",
      "name": "bar",
      "start": 28,
    },
  ],
  "kind": "export",
  "name": "bar",
  "start": 0,
}
`;

exports[`parse #export(foo) with trailing space 1`] = `
[
  {
    "args": [
      "Elem",
    ],
    "end": 24,
    "kind": "export",
    "start": 7,
  },
]
`;

exports[`parse #import foo 1`] = `
[
  {
    "end": 11,
    "kind": "import",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse #import foo(a,b) as baz from bar 1`] = `
[
  {
    "as": "baz",
    "end": 27,
    "from": "bar",
    "kind": "import",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse @attribute before fn 1`] = `
[
  {
    "children": [],
    "end": 31,
    "kind": "fn",
    "name": "main",
    "start": 0,
  },
]
`;

exports[`parse @workgroup_size(a, b, 1) before fn 1`] = `
[
  {
    "children": [],
    "end": 47,
    "kind": "fn",
    "name": "main",
    "start": 29,
  },
]
`;

exports[`parse empty string 1`] = `[]`;

exports[`parse fn foo() { } 1`] = `
[
  {
    "children": [],
    "end": 12,
    "kind": "fn",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse fn with calls 1`] = `
[
  {
    "children": [
      {
        "call": "foo",
        "end": 14,
        "kind": "call",
        "start": 10,
      },
      {
        "call": "bar",
        "end": 21,
        "kind": "call",
        "start": 17,
      },
    ],
    "end": 26,
    "kind": "fn",
    "name": "foo",
    "start": 0,
  },
]
`;

exports[`parse fn with line comment 1`] = `
[
  {
    "children": [],
    "end": 39,
    "kind": "fn",
    "name": "binaryOp",
    "start": 0,
  },
]
`;

exports[`parse struct 1`] = `
[
  {
    "end": 30,
    "kind": "struct",
    "start": 0,
  },
]
`;

exports[`wordNumArgs parses (a, b, 1) 1`] = `
[
  "a",
  "b",
  "1",
]
`;
